// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IconBookmarkActiveSvg should match snapshot 1`] = `
"import React, { AllHTMLAttributes } from 'react';

export const IconBookmarkActiveSvg = (props: AllHTMLAttributes<SVGElement>) => (
  <svg
    viewBox=\\"0 0 24 24\\"
    focusable=\\"false\\"
    fill=\\"currentColor\\"
    width={16}
    height={16}
    {...props}
  >
    <path
      d=\\"M18 21l-6-4-6 4V5c-.1-1 .7-1.9 1.7-2h8.6c1 .1 1.8 1 1.7 2v16z\\"
      stroke=\\"currentColor\\"
      strokeWidth={2}
      strokeLinecap=\\"round\\"
      strokeLinejoin=\\"round\\"
    />
  </svg>
);
"
`;

exports[`IconBookmarkSvg should match snapshot 1`] = `
"import React, { AllHTMLAttributes } from 'react';

export const IconBookmarkSvg = (props: AllHTMLAttributes<SVGElement>) => (
  <svg
    viewBox=\\"0 0 24 24\\"
    focusable=\\"false\\"
    fill=\\"currentColor\\"
    width={16}
    height={16}
    {...props}
  >
    <path
      d=\\"M18 21l-6-4-6 4V5c-.1-1 .7-1.9 1.7-2h8.6c1 .1 1.8 1 1.7 2v16z\\"
      fill=\\"none\\"
      stroke=\\"currentColor\\"
      strokeWidth={2}
      strokeLinecap=\\"round\\"
      strokeLinejoin=\\"round\\"
    />
  </svg>
);
"
`;

exports[`IconChevronSvg should match snapshot 1`] = `
"import React, { AllHTMLAttributes } from 'react';

export const IconChevronSvg = (props: AllHTMLAttributes<SVGElement>) => (
  <svg
    viewBox=\\"0 0 24 24\\"
    focusable=\\"false\\"
    fill=\\"currentColor\\"
    width={16}
    height={16}
    {...props}
  >
    <path
      fill=\\"none\\"
      stroke=\\"currentColor\\"
      strokeWidth={2}
      strokeLinecap=\\"round\\"
      strokeLinejoin=\\"round\\"
      d=\\"M20 8l-8 8-8-8\\"
    />
  </svg>
);
"
`;

exports[`IconCriticalSvg should match snapshot 1`] = `
"import React, { AllHTMLAttributes } from 'react';

export const IconCriticalSvg = (props: AllHTMLAttributes<SVGElement>) => (
  <svg
    viewBox=\\"0 0 24 24\\"
    focusable=\\"false\\"
    fill=\\"currentColor\\"
    width={16}
    height={16}
    {...props}
  >
    <circle
      cx={12}
      cy={12}
      r={10}
      fill=\\"none\\"
      stroke=\\"currentColor\\"
      strokeWidth={2}
      strokeMiterlimit={10}
    />
    <circle cx={12} cy={17} r={1} />
    <path
      fill=\\"none\\"
      stroke=\\"currentColor\\"
      strokeWidth={2}
      strokeLinecap=\\"round\\"
      strokeLinejoin=\\"round\\"
      d=\\"M12 8v5\\"
    />
  </svg>
);
"
`;

exports[`IconInfoSvg should match snapshot 1`] = `
"import React, { AllHTMLAttributes } from 'react';

export const IconInfoSvg = (props: AllHTMLAttributes<SVGElement>) => (
  <svg
    viewBox=\\"0 0 24 24\\"
    focusable=\\"false\\"
    fill=\\"currentColor\\"
    width={16}
    height={16}
    {...props}
  >
    <circle
      cx={12}
      cy={12}
      r={10}
      fill=\\"none\\"
      stroke=\\"currentColor\\"
      strokeWidth={2}
      strokeLinecap=\\"round\\"
      strokeLinejoin=\\"round\\"
    />
    <path
      fill=\\"none\\"
      stroke=\\"currentColor\\"
      strokeWidth={2}
      strokeLinecap=\\"round\\"
      strokeLinejoin=\\"round\\"
      d=\\"M12 16v-4m0-4h0\\"
    />
  </svg>
);
"
`;

exports[`IconPositiveSvg should match snapshot 1`] = `
"import React, { AllHTMLAttributes } from 'react';

export const IconPositiveSvg = (props: AllHTMLAttributes<SVGElement>) => (
  <svg
    viewBox=\\"0 0 24 24\\"
    focusable=\\"false\\"
    fill=\\"currentColor\\"
    width={16}
    height={16}
    {...props}
  >
    <circle
      cx={12}
      cy={12}
      r={10}
      fill=\\"none\\"
      stroke=\\"currentColor\\"
      strokeWidth={2}
      strokeMiterlimit={10}
    />
    <path
      fill=\\"none\\"
      stroke=\\"currentColor\\"
      strokeWidth={2}
      strokeLinecap=\\"round\\"
      strokeLinejoin=\\"round\\"
      d=\\"M16 10l-5 5-2-2\\"
    />
  </svg>
);
"
`;

exports[`IconTickSvg should match snapshot 1`] = `
"import React, { AllHTMLAttributes } from 'react';

export const IconTickSvg = (props: AllHTMLAttributes<SVGElement>) => (
  <svg
    viewBox=\\"0 0 24 24\\"
    focusable=\\"false\\"
    fill=\\"currentColor\\"
    width={16}
    height={16}
    {...props}
  >
    <path
      fill=\\"none\\"
      stroke=\\"currentColor\\"
      strokeWidth={2}
      strokeLinecap=\\"round\\"
      strokeLinejoin=\\"round\\"
      d=\\"M19 7L9 17l-4-4\\"
    />
  </svg>
);
"
`;
